# ayga-cli

./: .coverage  .env  .gitignore  AGENTS.md  CONTEXT.md  INSTALL_WINDOWS.md  INTEGRATION_REPORT.md  README.md  README_GITHUB.md  SETUP_GITHUB_REPO.md  SKILL.md  WINDOWS_PLAN.md  pyproject.toml  run_api_experiments.py
docs/: ARCHITECTURE-v2.md  ARCHITECTURE.md  BACKLOG-v2.1.md  BACKLOG-v2.2.md  BRD.md  PLAN.md  PRD-v2.1.md  WINDOWS_SETUP.md
research/: repo-analysis-report.md
scripts/: benchmark.py  install.ps1  quick_benchmark.py
src/aparser_cli/: __init__.py  config.py  main.py  manifest.py  presets.py  static_manifest.json  static_manifest.py
src/aparser_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/aparser_cli/client/: __init__.py  http.py  redis.py
src/aparser_cli/commands/: __init__.py  parsers.py  ping.py  presets.py  redis.py  run.py  test.py
src/aparser_cli/exceptions/: __init__.py
src/aparser_cli/mcp/: __init__.py  server.py
src/aparser_cli/utils/: __init__.py  dry_run.py  error_helper.py
src/ayga_cli/: __init__.py  config.py  main.py  manifest.py  presets.py  proxy_strategy.py  static_manifest.py
src/ayga_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ayga_cli/client/: __init__.py  http.py  redis.py
src/ayga_cli/commands/: __init__.py  get.py  parsers.py  ping.py  presets.py  redis.py  run.py  sources.py  test.py
src/ayga_cli/exceptions/: __init__.py  exit_codes.py
src/ayga_cli/mcp/: __init__.py  server.py
src/ayga_cli/utils/: __init__.py  dry_run.py  error_helper.py  fields.py  (+3 more)
tests/: __init__.py  conftest.py  test_config.py  test_error_helper.py  test_html_to_md.py  test_http_client.py  test_manifest.py  test_presets.py  test_proxy_strategy.py  test_redis_client.py
tests/test_commands/: test_get.py  test_get_flags.py  test_parsers.py  test_ping.py  test_redis.py  test_sources.py
tests/test_mcp/: test_server.py
tests/test_utils/: test_fields.py  test_sources_cache.py
(+3 files in other folders)
